[package]
name = "DataModelHelloWorld"
version = "0.1.0"
edition = "2021"

[lib]
name = "data_model_hello_world_rs"
crate-type = ["cdylib"]

[dependencies.windows]
version = "0.28.0"
features = [
    "std",
    "alloc",
    "build",
    "Win32_Foundation",
    "Win32_Globalization",
    "Win32_System_Com",
    "Win32_System_Ole",
    "Win32_System_Diagnostics_Debug",
]
